fixed the alignment of nav items and dark mode btn

--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -18,6 +18,9 @@ $nav-bg-color: black;
   ul {
     list-style-type: none;
     margin-right: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
   }
   li {
     display: inline;
